--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         });
 
         yesButton.addEventListener("click", function() {
-            document.body.innerHTML = "<h1>เย้! โมโมกดแล้วววววววววววววววว !  ❤️</h1><img src='your-cat-image.png' alt='Happy Cat' width='200'>";
+            document.body.innerHTML = "<h1>เย้! โมโมกดแล้วววววววววววววววว !  ❤️</h1><img src='your-cat-image.png' alt='' width='200'>";
         });
     </script>
 </body>
