--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </style>
 </head>
 <body>
-    <h1>Will you be my Valentine?</h1>
+    <h1>Will you be my Valentine ได้ไหมจ๊ะ?</h1>
     <div class="buttons">
         <button class="yes" id="yesButton">Yes</button>
         <button class="no" id="noButton">No</button>
